--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
-__pycache__
-__pycache__/
-subordinate_directory/__pycache__/
-main_directory/__pycache__/
-subordinate_directory/__pycache__
-main_directory/__pycache__
-
 *.pyc
+
+#——————— ironstein ———————
+env
+#———————————————————-—————
